--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:navigationBarColor">@color/wireguard_brand_blue</item>
         <item name="android:statusBarColor">@color/wireguard_brand_blue</item>
+        <item name="actionModeBackground">@color/wireguard_brand_blue</item>
         <item name="colorAccent">@color/wireguard_brand_red</item>
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/wireguard_brand_blue</item>
