--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,4 +7,10 @@
         android:title="@string/restore_on_boot_title" />
     <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
     <com.wireguard.android.preference.ZipExporterPreference android:key="zip_exporter" />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="dark_theme"
+        android:summaryOn="@string/dark_theme_summary_on"
+        android:summaryOff="@string/dark_theme_summary_off"
+        android:title="@string/dark_theme_title" />
 </PreferenceScreen>
